--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "5.20.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -30,13 +30,14 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-oauth/google": "^0.12.1",
     "@sentry/nextjs": "^8",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.437.0",
+    "lucide-react": "^0.454.0",
     "markdown-it": "^14.1.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
@@ -59,7 +60,7 @@
     "eslint-config-next": "14.2.7",
     "husky": "^9.1.5",
     "postcss": "^8",
-    "prisma": "5.19.0",
+    "prisma": "5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
