--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "markdown-it": "^14.1.0",
     "next": "^14.2.13",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icon-cloud": "^4.1.4",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
     "tailwind-merge": "^2.5.2",
