--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,17 @@
 {
-  "extends": "next/core-web-vitals",
-  "plugins": ["@typescript-eslint"],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["next/core-web-vitals"],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error"
+    "indent": ["error", 2], // 使用 2 个空格进行缩进
+    "quotes": ["error", "single"], // 使用单引号
+    "semi": ["error", "never"] // 不使用分号
+    // 可以在此处添加更多自定义规则
   }
 }
