--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
   "semi": false,
-  "trailingComma": "none",
   "singleQuote": true,
-  "printWidth": 100,
+  "trailingComma": "es5",
+  "printWidth": 120,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid"
 }
