--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint src --fix && yarn format",
+    "lint:fix": "eslint . --fix ",
     "format": "prettier --write src",
     "format:check": "prettier --check src"
   },
@@ -34,8 +34,6 @@
     "@sentry/nextjs": "^8",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
@@ -58,11 +56,17 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "clsx": "^2.1.1",
-    "eslint": "^8",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "prisma": "5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
